src/kubernetes/postgre-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  labels:
    io.kompose.service: postgre
  name: postgre
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgre
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      labels:
        io.kompose.network/kube_news_network: "true"
        io.kompose.service: postgre
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
            - name: POSTGRES_PASSWORD
            - name: POSTGRES_USER
          image: postgres:12.17
          name: postgre
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresql-volume
      restartPolicy: Always
      volumes:
        - name: postgresql-volume
          persistentVolumeClaim:
            claimName: postgresql-volume
status: {}
